--- a/relaxr_express/package.json
+++ b/relaxr_express/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "mustache-express": "^1.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "v12.13.0"
+  }
 }
